# src/2-features/3-columns/1-models/Column.js
@@ -1,0 +1,20 @@
+const {model} = require("mongoose")
+const {Schema} = require("mongoose")
+
+const Column = new Schema(
+    {
+        board_id: {
+            type: String,
+            required: true
+        },
+        title: {
+            type: String,
+            required: true
+        }
+    },
+    {
+        created: "created"
+    }
+)
+
+module.exports = model("Column", Column);
