# swagger/openapi.json
@@ -3,23 +3,17 @@
   "info": {
     "title": "Trello Clone API",
     "version": "v1",
-    "description": "header === body"
+    "description": "baseUrl: https://trello-app-clone.herokuapp.com/"
   },
   "servers": [
     {
       "url": "https://trello-app-clone.herokuapp.com/"
-    },
-    {
-      "url": "http://localhost:5000/"
     }
   ],
   "tags": [
-    {
-      "name": "auth"
-    },
-    {
-      "name": "boards"
-    }
+    {"name": "auth"},
+    {"name": "boards"},
+    {"name": "column"}
   ],
   "paths": {
     "/auth/login": {
@@ -177,7 +171,7 @@
                   "example": {
                     "resultCode": 0,
                     "data": {
-                      "board": "Array Boards"
+                      "boards": "Array Boards"
                     }
                   }
                 }
@@ -361,13 +355,193 @@
           }
         }
       }
+    },
+
+
+    "/column": {
+      "get": {
+        "summary": "getColumns",
+        "tags": [
+          "column"
+        ],
+        "parameters": [
+          {
+            "name": "Board ID",
+            "in": "query",
+            "required": true,
+            "description": "board_id",
+            "schema": {
+              "type": "string",
+              "example": "board_id"
+            }
+          }
+        ],
+        "description": "Parameters",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "resultCode": 0,
+                    "data": {
+                      "columns": "columns<Array<ColumnType>>",
+                      "count": "count columns"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "addColumn",
+        "tags": [
+          "column"
+        ],
+        "parameters": [
+          {
+            "name": "Board ID",
+            "in": "query",
+            "required": true,
+            "description": "board_id",
+            "schema": {
+              "type": "string",
+              "example": "board_id"
+            }
+          },
+          {
+            "name": "Column data",
+            "in": "header",
+            "required": true,
+            "description": "Column data",
+            "schema": {
+              "type": "object",
+              "example": {
+                "title": "string"
+              }
+            }
+          }
+        ],
+        "description": "Parameters",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "resultCode": 0,
+                    "message": "Column added"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+    },
+    "/column/{id)": {
+      "delete": {
+        "summary": "delete column",
+        "tags": [
+          "column"
+        ],
+        "parameters": [
+          {
+            "name": "Column ID",
+            "in": "path",
+            "required": true,
+            "description": "Column",
+            "schema": {
+              "type": "string",
+              "example": "ColumnId"
+            }
+          }
+        ],
+        "description": "Parameters",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "resultCode": 0,
+                    "message": "column deleted"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "updateColumn",
+        "tags": [
+          "column"
+        ],
+        "parameters": [
+          {
+            "name": "column ID",
+            "in": "path",
+            "required": true,
+            "description": "column id",
+            "schema": {
+              "type": "string",
+              "example": "column id"
+            }
+          },
+          {
+            "name": "Column data",
+            "in": "header",
+            "required": true,
+            "description": "Column data",
+            "schema": {
+              "type": "object",
+              "example": {
+                "title": "string"
+              }
+            }
+          }
+        ],
+        "description": "Parameters",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "resultCode": 0,
+                    "message": "Column updated"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
     }
+
+
   },
   "components": {
     "schemas": {
       "User": {
         "type": "object",
         "properties": {
+          "_id": {
+            "type": "string"
+          },
           "userName": {
             "type": "string"
           },
@@ -412,7 +586,24 @@
           "author_id": {
             "type": "string"
           },
-          "id": {
+          "_id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "created": {
+            "type": "string"
+          }
+        }
+      },
+      "Column": {
+        "type": "object",
+        "properties": {
+          "board_id": {
+            "type": "string"
+          },
+          "_id": {
             "type": "string"
           },
           "title": {
